@@ -1,3 +1,6 @@
+21-July-2011 Michael Babker Version 1.8 Changes
++ Add script to display the position within the playing file
+
 17-July-2011 Michael Babker Version 1.8 Changes
 + Add ability to select default sorting for feed view
 + Add pt-BR translation
